--- a/gallows.html
+++ b/gallows.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="jumbotron">
-      <h2 class="text-center">Jogo da forca</h2>
+      <h2 class="text-center">Jogo da Forca</h2>
     </div>
     <div class="container">
       <!-- div com a classe sprite -->
@@ -30,11 +30,7 @@
 
     <script src="js/jquery.min.js"></script>
     <script src="js/sprite.js"></script>
-    <script>
-      var sprite = createSprite(".sprite");
-      setInterval(function() {
-        sprite.nextFrame();
-      }, 500);
-    </script>
+    <script src="js/jogo.js"></script>
+    <script></script>
   </body>
 </html>
