--- a/gallows.html
+++ b/gallows.html
@@ -6,6 +6,22 @@
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/sprite.css" />
     <link rel="stylesheet" href="css/lacuna.css" />
+    <!--Import Google Icon Font-->
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <!--Import materialize.css-->
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="css/materialize.min.css"
+      media="screen,projection"
+    />
+
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Jogo da Forca</title>
   </head>
   <body>
@@ -16,21 +32,26 @@
       <!-- div com a classe sprite -->
       <div class="sprite"></div>
 
-      <ul class="lacunas text-center"></ul>
+      <ul id="lacunas" class="lacunas text-center"></ul>
 
       <div class="text-center">
         <input
           id="entrada"
           class="entrada"
-          placeholder="Palavra secreta"
+          placeholder="Digite a palavra secreta e aperte enter!"
           autofocus
         />
       </div>
     </div>
-
+    <script type="text/javascript" src="js/materialize.min.js"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/sprite.js"></script>
     <script src="js/jogo.js"></script>
-    <script></script>
+    <script src="js/controller.js"></script>
+    <script>
+      var sprite = createSprite(".sprite");
+      var jogo = criaJogo(sprite);
+      criaController(jogo).inicia();
+    </script>
   </body>
 </html>
